--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,7 +7,7 @@
       <header style="background-color: #FF0000; height: 70px; width: 100%;">
       </header>
         <footer style="background-color: #00FF00; height: 60px;
- position: absolute; margin-bottom: 0px; text-align: center;
+ position: absolute; bottom: 0px; text-align: center;
  width: 100%; vertical-align: middle; line-height: 60px;">
             Best School
         </footer>
